--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,17 @@
 @import "tailwindcss";
+
+:root{
+    font-family: "sora";
+}
+
+@keyframes gradientFlow {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+  }
+  
+  .animate-gradient {
+    background-size: 200% 200%;
+    animation: gradientFlow 3s infinite linear;
+  }
+  
